--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -14,14 +14,14 @@
   d = diff
   dfs = diff --compact-summary
 
-  co = switch
+  co = checkout
   sw = switch
 
   br = branch
   chp = cherry-pick
   fa = fetch --all -p
   pl = pull
-  pla = pull --all -pull
+  pla = pull --all -p
   ps = push
   psf = push -f
 
@@ -48,6 +48,7 @@
   summary   = !zsh "$HOME/Developer/personal/dotfiles/git-extras/git-summary.sh"
   pr = "!f() { git fetch -fu ${2:-origin} refs/pull/$1/head:pr/$1; } ; f"
   cleanup = !ruby "$HOME/Developer/personal/dotfiles/git-extras/git-cleanup.rb"
+	sh = stash
 
 [push]
   default = simple
@@ -56,9 +57,8 @@
   ui = true
 
 [core]
-  editor = code
+  editor = vim
   excludesfile = ~/.gitignore
-  pager = diff-so-fancy | less --tabs=4 -RFX
 
 [format]
   pretty = %Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)%an%Creset %C(bold yellow)%GK%Creset
@@ -95,3 +95,5 @@
   old = red bold
   new = green bold
   whitespace = red reverse
+[commit]
+  gpgsign = false
