Remove GPG key in log format

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -61,7 +61,7 @@
   excludesfile = ~/.gitignore
 
 [format]
-  pretty = %Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)%an%Creset %C(bold yellow)%GK%Creset
+  pretty = %Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)%an%Creset %C(bold yellow)
   graph = true
 
 [advice]
